Added Tools Inventory CRUD UI Functionality